# missing-citations-identifier

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: corpus_manifest.json  eval_dataset.json
database/: openalex_paper_cache.json  s2_paper_cache.json
demos/: citation_graph.ipynb  keyword_graph.ipynb  mvp_experiment.ipynb  pdf_parser.ipynb  test.py  test_fix.py
eval/: gemini_results.txt  reranker_results.txt
eval/acl_arc_dataset/: test.jsonl
src/: __init__.py  config.py  extract_papers.ipynb  indexer.py  keyword_graph_output.json  logger.py  main.py  model_manager.py  raw_nougat_output.txt  run.md
src/database/: __init__.py  database.py  test_db.py
src/database/models/: __init__.py  citation.py  concept.py  paper.py
src/database/postgres/: engine.py
src/database/postgres/tables/: __init__.py  citation.py  corpus_paper.py  paper.py
src/entities/: __init__.py  parsed_paper.py  retrieval_result.py  sentence_record.py
src/evaluation/: __init__.py  baselines.py  metrics.py  runner.py
src/evaluation/benchmarks/: __init__.py  acl_arc.py  common.py  s2orc.py  scicite.py
src/experiments/: gemini_classifier.py  gemini_evaluation.py  reranking_demo.py  retrieval_demo.py  stage1_parsing.py
src/llm/: client.py
src/llm/genai_client/: client.py
src/pipeline/: __init__.py  candidate_retriever.py  citation_graph.py  concept_extractor.py  concept_graph.py  keyword_graph.py  pdf_parser.py  reranker.py  retriever.py  sentence_extractor.py
src/preprocess/: extract_papers.ipynb
src/prompts/: __init__.py  classifier_prompt.py
src/util/: config.py  get_data.py
src/utils/: __init__.py  config.py  logger.py  regex_patterns.py
thesis/: template.tex
