[project]
name = "missing-citations-identifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Sâmpetru D. Mario",email = "119307188+mariosam23@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "arxiv (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
