[project]
name = "missing-citations-identifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Sâmpetru D. Mario",email = "119307188+mariosam23@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "numpy (<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "arxiv (>=2.3.1,<3.0.0)",
    "semanticscholar (>=0.7.0)",
    "sqlalchemy (>=2.0.0)",
    "python-dotenv (>=1.0.0)",
    "pymupdf (>=1.23.8,<1.24.0)",
    "spacy (>=3.7.0)",
    "scispacy (>=0.5.0)",
    "networkx (>=3.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "torch (>=2.10.0+cu128)",
    "torchvision (>=0.25.0+cu128)",
    "en-core-sci-scibert @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_scibert-0.5.4.tar.gz",
    "timm (<1.0.0)",
    "keybert (>=0.9.0,<0.10.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
